compiler/testData/diagnostics/tests/resolve/kt49736.fir.kt
// WITH_STDLIB

import kotlin.collections.forEach as forEach1

fun foo() {
    <!UNRESOLVED_REFERENCE!>z<!>.a.forEach1 {  }
}